# ChatSearch

./: .gitignore  pyproject.toml  vercel.json
.cursor/rules/: commit-messages.mdc  python-tooling.mdc
backend/: main.py
frontend/: components.js
public/: app.js  components.js  index.html  style.css
reference/: whatsapp-web.css
