[project]
name = "chatsearch"
version = "0.1.0"
description = "WhatsApp chat viewer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
app = "backend.main:app"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "numpy>=2.4.2",
    "pillow>=12.1.1",
]
